<resources>
    <string name="app_name">OctoPrice</string>
    <string name="title_products">Products</string>
    <string name="title_industry">Industry</string>
    <string name="title_settings">Settings</string>
    <string name="title_product_details">Product Details</string>
    <string name="electricity_single_register">Electricity Single Register Rates</string>
    <string name="standard_unit_rate">Standard unit rate (p/kWh)</string>
    <string name="standing_charge">Standing charge (p/day)</string>
    <string name="electricity_dual_register">Electricity Dual Register Rates</string>
    <string name="night_unit_price">Night unit rate (p/kWh)</string>
    <string name="day_unit_price">Day unit rate (p/kWh)</string>
    <string name="term">Term</string>
    <string name="green_energy">Green Energy?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="not_green_energy_product">Not a green energy product</string>
    <string name="green_energy_product">Green energy product</string>
    <string name="search">Search</string>
    <string name="enter_post_code">Enter post code</string>
    <string name="find_grid_supply_point_title">Find grid supply point</string>
</resources>